# code-format

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  build-tbls.sh
src/: cpp.lex  formatters.cpp  formatters.h  lex_analyzer.inl  lex_defs.h  main.cpp  parser.cpp  parser.h  print.h
